...
    <string name="menu_page_add_to_list">Add to reading list</string>
    <string name="menu_page_share">Share link</string>
    <string name="menu_page_open_a_new_tab">Open a new tab</string>
    <string name="menu_page_reading_lists">Reading lists</string>
    <string name="menu_page_recently_viewed">Recently viewed</string>
    <string name="menu_page_citation">Cite this page</string>
    <string name="menu_page_generate_qr_code">Generate QR code</string>
    <string name="menu_page_share_nfc">Share via NFC</string>


    <!-- Long press menu -->
    <string name="menu_long_press_open_page">Open</string>
    <string name="menu_long_press_open_in_new_tab">Open in new tab</string>
...
    <string name="view_main_page_card_action">View main page</string>
    <string name="view_featured_image_card_title">Picture of the day</string>
    <string name="view_featured_image_card_download">Download</string>
    <string name="menu_feed_card_dismiss">Hide this card</string>
    <string name="menu_feed_card_dismissed">Card hidden.</string>
    <string name="menu_feed_card_edit_card_languages">Edit card languages</string>
    <string name="menu_feed_overflow_label">More options</string>

    <string name="feed_featured_image_share_subject">Featured image from Wikimedia Commons</string>
    <string name="feed">Explore</string>
    <string name="most_read_list_card_title">Trending</string>
    <string name="view_static_card_icon_content_description">Card icon</string>
    <string name="view_card_news_title">In the news</string>
...
    <string name="description_edit_license_notice"><![CDATA[By changing the title description, I agree to the <a href="%1$s">Terms of Use</a> and to irrevocably release my contributions under the <a href="%2$s">Creative Commons CC0</a> license.]]></string>
    <!-- /Description editing -->

    <!-- Description editing success -->
    <string name="description_edit_success_saved">Description published!</string>
    <string name="description_edit_success_encouragement">You just made Wikipedia better for everyone</string>
    <string name="description_edit_success_done">Done</string>
    <string name="description_edit_success_did_you_know">Did you know?</string>
    <string name="description_edit_success_article_edit_hint">You can also edit articles within this app. Try fixing typos and small sentences by clicking on the ^1 icon next time</string>
    <!-- /Description editing success -->

    <!-- Description editing tutorial -->
    <string name="description_edit_tutorial_title_descriptions">Title descriptions</string>
...
