...
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="50dp"
        android:text="@string/qr_scanner_instruction"
        android:textSize="14sp"
        app:layout_constraintBottom_toTopOf="@+id/qrdone"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.493"
        app:layout_constraintStart_toStartOf="parent"
        android:contentDescription="@null"/>


...
